--- a/gdpr/privacy/app/templates/add_supression_configuration.html
+++ b/gdpr/privacy/app/templates/add_supression_configuration.html
@@ -28,9 +28,13 @@
                     <div class="form-group has-success">
                         <label for="cc-name" class="control-label mb-1">Enter % of bits to supress</label>
                         <div class="slidecontainer">
-                          <input type="range" min="0" max="100" value="50" class="slider" id="myRange" onchange="updateTextInput(this.value);">
+                          <input type="range" min="0" max="100" value="50" class="slider" id="myRange" onchange="updateTextInput(this.value);" name="suppress_percent2">
                           <input type="number" name = "suppress_percent" id="textInput" required>
                         </div>
+                    </div>
+                    <div class="form-group has-success">
+                        <label for="cc-name" class="control-label mb-1">Replacement Character</label>
+                        <input id="title" name="replacement_character" type="text" class="form-control cc-name valid" value="*"/>
                     </div>
                   <div class="form-group">
                   <button id="payment-button" type="submit" class="btn btn-lg btn-info btn-block">
@@ -51,7 +55,7 @@
           document.getElementById('textInput').value=val; 
         }
 jQuery(function ($) {
-    var $inputs = $('input[name=suppress_number],input[name=suppress_percent]');
+    var $inputs = $('input[name=suppress_number],input[name=suppress_percent],input[name=suppress_percent2]');
     $inputs.on('input', function () {
         // Set the required property of the other input to false if this input is not empty.
         $inputs.not(this).prop('required', !$(this).val().length);
