--- a/gdpr/privacy/app/templates/dashboard.html
+++ b/gdpr/privacy/app/templates/dashboard.html
@@ -29,7 +29,7 @@
                 </small>
             </div>
             <div class="card-body">
-                <button type="button" class="btn btn-secondary" onclick="location.href='/admin'">Enter Text</button>
+                <button type="button" class="btn btn-secondary" onclick="location.href='/anonymize'">Enter Text</button>
             </div>
         </div>
 
