--- a/gdpr/privacy/app/templates/index.html
+++ b/gdpr/privacy/app/templates/index.html
@@ -40,8 +40,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="./"><img src="{% static "images/logo.png" alt="Logo" %}" style="margin-top:15px; margin-bottom:15px"></a>
-                <a class="navbar-brand hidden" href="./"><img src="{% static "images/logo2.png" alt="Logo" %}"></a>
+                <a class="navbar-brand" href="/dashboard"><img src="{% static "images/clips.jpeg" %}" style="margin-top:15px; margin-bottom:15px; height:100px; width:100px;"></a>
             </div>
 
             <div id="main-menu" class="main-menu collapse navbar-collapse">
