--- a/gdpr/privacy/app/templates/base.html
+++ b/gdpr/privacy/app/templates/base.html
@@ -31,7 +31,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="/posts">Text Anonymizer</a>
+              <a class="navbar-brand" href="/dashboard">Text Anonymizer</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
