Added and integrated regex based attribute search

--- a/gdpr/privacy/app/templates/add_attribute.html
+++ b/gdpr/privacy/app/templates/add_attribute.html
@@ -16,7 +16,7 @@
                     <h3 class="text-center">Enter Attribute</h3>
                 </div>
                 <hr>
-                <form action="add_attribute/" method="post">
+                <form action="/add_attribute/" method="post">
                     {% csrf_token %}
                     <div class="form-group has-success">
                         <label for="cc-name" class="control-label mb-1">Attribute Title</label>
