--- a/gdpr/privacy/app/templates/anonymize.html
+++ b/gdpr/privacy/app/templates/anonymize.html
@@ -12,7 +12,7 @@
         <div id="pay-invoice">
             <div class="card-body">
                 <div class="card-title">
-                    <h3 class="text-center">Enter text here {{attribute.attribute_title}}</h3>
+                    <h3 class="text-center">Enter text here </h3>
                 </div>
                 <hr>
                 <form action="/anonymize/" method="post">
