--- a/gdpr/privacy/app/templates/index.html
+++ b/gdpr/privacy/app/templates/index.html
@@ -46,7 +46,25 @@
             <div id="main-menu" class="main-menu collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active">
-                        <a href="/dashboard"> <i class="menu-icon fa fa-dashboard"></i>Dashboard </a>
+                        <a href="/dashboard/"> <i class="menu-icon fa fa-dashboard"></i>Dashboard </a>
+                    </li>
+                    <li class="active">
+                        <a href="/api_token_management/"> <i class="menu-icon fa fa-id-badge"></i>API Token Management</a>
+                    </li>
+                    <li class="active">
+                        <a href="/anonymize/"> <i class="menu-icon fa fa-file-text"></i>Anonymize Text</a>
+                    </li>
+                    <li class="active">
+                        <a href="/anonymize_uploaded_file_gui/"> <i class="menu-icon fa fa-cloud-upload"></i>Anonymize File</a>
+                    </li>
+                    <li class="active">
+                        <a href="/add_document_to_knowledgebase/"> <i class="menu-icon fa fa-font"></i>Add Text to KB</a>
+                    </li>
+                    <li class="active">
+                        <a href="/upload_file_to_knowledgebase/"> <i class="menu-icon fa fa-upload"></i>Upload file to KB</a>
+                    </li>
+                    <li class="active">
+                        <a href="/reset_setup_application/"> <i class="menu-icon fa fa-power-off"></i>Reset to Default</a>
                     </li>
                 </ul>
             </div><!-- /.navbar-collapse -->
