--- a/gdpr/privacy/app/templates/dashboard.html
+++ b/gdpr/privacy/app/templates/dashboard.html
@@ -125,8 +125,9 @@
   <table id="bootstrap-data-table" class="table table-striped table-bordered">
     <thead>
       <tr>
-        <th>Regular Expression</th>
-        <th>Attribute Name</th>
+        <th>Regular Expression </th>
+        <th>Attribute Name </th>
+        <th> Delete Pattern </th>
       </tr>
     </thead>
     <tbody>
@@ -134,6 +135,9 @@
       <tr>
         <td>{{ regex_pattern.regular_expression }}</td>
         <td>{{ regex_pattern.attribute.attribute_title }}</td>
+        <td>
+          <button type="button" class="btn btn-primary" onclick="location.href='/delete_regex/{{regex_pattern.id}}/'">Delete </button>
+        </td>
       </tr>
       {% endfor %}
     </tbody>
