added more links to dashboard

--- a/gdpr/privacy/app/templates/dashboard.html
+++ b/gdpr/privacy/app/templates/dashboard.html
@@ -38,6 +38,23 @@
 </div>
 
 <div class="row" style="margin-left:10px">
+    <div class="col-md-12">
+
+        <div class="card">
+            <div class="card-header">
+                <strong>Configure TF-IDF </strong>
+                <small>Use this button to configure the TF-IDF system
+                </small>
+            </div>
+            <div class="card-body">
+                <button type="button" class="btn btn-primary" onclick="location.href='/configure_tf_idf/'">Configure</button>
+            </div>
+        </div><!-- /# card -->
+
+    </div>
+</div>
+
+<div class="row" style="margin-left:10px">
 
 <div class="col-md-12">
     <div class="card">
