--- a/gdpr/privacy/app/templates/index.html
+++ b/gdpr/privacy/app/templates/index.html
@@ -66,6 +66,9 @@
                     <li class="active">
                         <a href="/reset_setup_application/"> <i class="menu-icon fa fa-power-off"></i>Reset to Default</a>
                     </li>
+                    <li class="active">
+                        <a href="/configure_tf_idf/"> <i class="menu-icon fa fa-cog"></i>Configure TF-IDF</a>
+                    </li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </nav>
