--- a/gdpr/privacy/app/templates/anonymize.html
+++ b/gdpr/privacy/app/templates/anonymize.html
@@ -21,6 +21,11 @@
                             <div class="col col-md-3"><label for="textarea-input" class=" form-control-label">Text to Anonymize</label></div>
                             <div class="col-12 col-md-9"><textarea name="text_to_anonymize" id="textarea-input" rows="9" placeholder="Enter the Text here" class="form-control"required>{{text_to_anonymize}}</textarea></div>  
                     </div>
+                    <div class="row form-group">
+                            <div class="col col-md-3"><label for="textarea-input" class=" form-control-label">Apply TF-IDF detection?</label></div>
+                            <input type="checkbox" name="tfidf_anonymize" value="tfidf_anonymize">
+                    </div>
+
                   <div class="form-group">
                   <button id="payment-button" type="submit" class="btn btn-lg btn-info btn-block">
                       <span id="payment-button-amount">Submit</span>
