gave file upload anonymization the option to not use tf-idf

--- a/gdpr/privacy/app/templates/anonymize_uploaded_file_gui.html
+++ b/gdpr/privacy/app/templates/anonymize_uploaded_file_gui.html
@@ -25,6 +25,11 @@
                             
                             </div>  
                     </div>
+                    <div class="row form-group">
+                            <div class="col col-md-3"><label for="textarea-input" class=" form-control-label">Apply TF-IDF detection?</label></div>
+                            <input type="checkbox" name="tfidf_anonymize" value="tfidf_anonymize">
+                    </div>
+
 
                     </div>
                   <div class="form-group">
